<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtVFirebase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backlogin" />

    <LinearLayout
        android:id="@+id/contenedorLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/esquinas_redondeadas"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rbt"
            android:text="@string/title_welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/text_registro"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/title_user"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/title_password"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/segoeui"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/quest_olvidocontraseña"
            android:textColor="@color/selec"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/esquinas_red_silver"
            android:fontFamily="@font/rbt"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:text="@string/text_alternativa"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@drawable/googlelogo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="110dp"
                android:layout_weight="1"
                android:background="@drawable/fblogo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/quest_nuevousuario"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/text_crearcuenta"
                android:textColor="@color/selec"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>