<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RutasFragment" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/esquinas_redondeadas"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rbt"
            android:gravity="center"
            android:text="@string/title_AdminRuta"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_registroRuta"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/rbt"
            android:text="@string/btn_registroRuta"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_asignarRuta"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/rbt"
            android:text="@string/btn_asignarRuta"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/esquinas_redondeadas"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rbt"
            android:gravity="center"
            android:text="@string/title_AdminFlota"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_registroFlota"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/rbt"
            android:text="@string/btn_registroFlota"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_asignarFlota"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/rbt"
            android:text="@string/btn_editarFlota"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="191dp"
        android:layout_height="191dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/rutasadmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>